cluster/apps/default/my_spotify/deployment-and-svc-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: your-spotify-frontend
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: your-spotify-frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: your-spotify-frontend
  namespace: default
spec:
  selector:
    matchLabels:
      app: your-spotify-frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: your-spotify-frontend
    spec:
      containers:
        - image: yooooomi/your_spotify_client
          name: web
