cluster/apps/default/my_spotify/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: my-spotify
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: traefik
  rules:
    - host: "spotify.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              serviceName: your-spotify-frontend
              servicePort: 80
            path: "/"
  tls:
    - hosts:
        - "spotify.${SECRET_DOMAIN}"
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: my-spotify-backend
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: traefik
  rules:
    - host: "spotify-backend.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              serviceName: your-spotify-backend
              servicePort: 80
  tls:
    - hosts:
        - "spotify-backend.${SECRET_DOMAIN}"
